curl.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: curl
spec:
  containers:
  - name: main
    image: tutum/curl
    command: ["sleep", "1000000"]
