fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: fortune
spec:
    containers:
        - image: hanhiver/fortune
          name: generator
          volumeMounts:
              - name: html
                mountPath: /var/htdocs
        - image: nginx:alpine
          name: wserver
          volumeMounts:
              - name: html
                mountPath: /var/share/nginx/html
                readOnly: true
          ports:
              - containerPort: 80
                protocol: TCP
    volumes:
        - name: html
          emptyDir: {}
