myjob_env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: myjob-env
spec:
    containers:
        - image: hanhiver/myjob_env
          name: generator
