mytest-manual-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
    name: mytest-manual-v2
    labels:
        creation_method: manual
        env: prod
spec:
    containers:
        - image: hanhiver/mytest
          name: mytest
          ports:
              - containerPort: 5000
                protocol: TCP
