mytest-manual.yaml
apiVersion: v1
kind: Pod
metadata:
    name: mytest-manual
spec:
    containers:
        - image: mytest
          name: mytest
          ports:
              - containerPort: 5000
                protocol: TCP
