mytest-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: mytest-nodeport
spec:
    type: NodePort
    ports:
        - port: 5001
          targetPort: 5000
          nodePort: 30123
    selector:
        app: mytest
