mytest-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: mytest
spec:
    ports:
        - port: 5001
          targetPort: 5000
    selector:
        app: mytest
