mytest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mytest
spec:
    rules:
        - host: mytest.example.com
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: mytest-nodeport
                        servicePort: 5000
